--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask==2.0.2
 Flask-Compress==1.10.1
 geopandas==0.10.2
 greenlet==1.1.2
+gunicorn==20.1.0
 importlib-metadata==4.8.1
 itsdangerous==2.0.1
 Jinja2==3.0.2
@@ -23,6 +24,7 @@ numpy==1.21.2
 pandas==1.3.4
 pip==19.0.3
 plotly==5.3.1
+psycopg-binary==3.0.1
 psycopg2-binary==2.9.1
 pyproj==3.2.1
 python-dateutil==2.8.2
