--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 attrs==21.2.0
+autopep8==1.5.7
+beautifulsoup4==4.10.0
 Brotli==1.0.9
+bs4==0.0.1
 certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.0.3
 click-plugins==1.1.1
 cligj==0.7.2
@@ -11,28 +15,38 @@ dash-table==5.0.0
 Fiona==1.8.20
 Flask==2.0.2
 Flask-Compress==1.10.1
+geojson==2.5.0
 geopandas==0.10.2
 greenlet==1.1.2
 gunicorn==20.1.0
+h3==3.7.3
+idna==3.3
 importlib-metadata==4.8.1
 itsdangerous==2.0.1
 Jinja2==3.0.2
+lxml==4.6.3
 MarkupSafe==2.0.1
 munch==2.5.0
-mydcc==0.1.22
 numpy==1.21.2
 pandas==1.3.4
 pip==19.0.3
 plotly==5.3.1
 psycopg2-binary==2.9.1
+pycodestyle==2.8.0
 pyproj==3.2.1
 python-dateutil==2.8.2
 pytz==2021.3
+requests==2.26.0
+Rtree==0.9.7
 setuptools==40.8.0
 Shapely==1.7.1
 six==1.16.0
+soupsieve==2.2.1
 SQLAlchemy==1.4.25
 tenacity==8.0.1
+toml==0.10.2
+tqdm==4.62.3
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 Werkzeug==2.0.2
 zipp==3.6.0
